--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node index.js",
-  "dev": "nodemon index.js"
-   
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "ashwinip",
   "license": "ISC",
@@ -16,6 +15,7 @@
     "docx-pdf": "^0.0.1",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "phantomjs-prebuilt": "^2.1.16"
   }
 }
